--- a/SideScroller/SideScroller.vcxproj
+++ b/SideScroller/SideScroller.vcxproj
@@ -77,12 +77,12 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>false</SDLCheck>
-      <AdditionalIncludeDirectories>C:\Users\Jonathan\Desktop\shapist16jan\SideScroller\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>C:\Users\Jonathan\Documents\shapist-game\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;SDL2main.lib;SDL2.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\Jonathan\Desktop\shapist16jan\SideScroller\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\Jonathan\Documents\shapist-game\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
     <PostBuildEvent>
       <Command>XCOPY "$(SolutionDir)"\lib\*.DLL "$(TargetDir)" /D /K /Y</Command>
@@ -193,6 +193,7 @@
     <ClCompile Include="PhysicsObject.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="pugixml.cpp" />
     <ClCompile Include="RangedAI.cpp" />
     <ClCompile Include="ReloadCommand.cpp" />
     <ClCompile Include="RetreatingAI.cpp" />
@@ -261,6 +262,8 @@
     <ClInclude Include="Hud.h" />
     <ClInclude Include="Line.h" />
     <ClInclude Include="ParticleEngine.h" />
+    <ClInclude Include="pugiconfig.hpp" />
+    <ClInclude Include="pugixml.hpp" />
     <ClInclude Include="ReloadCommand.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Rocket.h" />
