--- a/SideScroller/SideScroller.vcxproj.filters
+++ b/SideScroller/SideScroller.vcxproj.filters
@@ -73,6 +73,9 @@
     <Filter Include="Particles">
       <UniqueIdentifier>{d5602b73-85bf-4339-a03f-b05848596da3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="pugixml">
+      <UniqueIdentifier>{82feb47a-b5f8-4211-a2e0-b9c694ff51f0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SDL2_framerate.c">
@@ -329,6 +332,9 @@
     </ClCompile>
     <ClCompile Include="Speech.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pugixml.cpp">
+      <Filter>pugixml</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -613,6 +619,12 @@
     </ClInclude>
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pugiconfig.hpp">
+      <Filter>pugixml</Filter>
+    </ClInclude>
+    <ClInclude Include="pugixml.hpp">
+      <Filter>pugixml</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
